# ajail

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: release.yml
src/: config.rs  main.rs  process.rs  sandbox.rs  seccomp.rs  util.rs  worktree.rs
tests/: claude-binary.nix  common.nix  config-dir.nix  custom-command.nix  dangerous-files.nix  default.nix  docker-socket.nix  home-claude.nix  nix-profile.nix  outside-home.nix  path-readonly.nix  pid-namespace.nix  sandbox.nix  ssh-agent.nix  unix-sockets-aarch64.nix  unix-sockets.nix  worktree-discard.nix  worktree-merge.nix
