[package]
name = "ajail"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
nix = { version = "0.29", features = ["sched", "mount", "signal", "process", "user", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
git2 = { version = "0.20", default-features = false }
hex = "0.4"
getrandom = "0.3"
